force-app/main/default/objects/SR_Approval_Hierarchy__c/SR_Approval_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>This object maintains the Team Tier Path for Approval Hierarchy.</description>
    <label>SR Approval Hierarchy</label>
    <nameField>
        <displayFormat>AH-{000000}</displayFormat>
        <label>Hierarchy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>