force-app/main/default/objects/SR_Approval_Hierarchy__c/fields/Base_Team__c.field-meta.xml
<CustomField>
    <fullName>Base_Team__c</fullName>
    <description>Tier 1 Team from this approval path</description>
    <label>Base Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>