force-app/main/default/objects/SR_Approval_Hierarchy__c/fields/Upper_Team__c.field-meta.xml
<CustomField>
    <fullName>Upper_Team__c</fullName>
    <description>The upper level teams available for Base Level</description>
    <label>Upper Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>