force-app/main/default/objects/SR_Approval_Hierarchy__c/fields/Upper_Tier__c.field-meta.xml
<CustomField>
    <fullName>Upper_Tier__c</fullName>
    <description>The tiers available for Base Level. Eg: 1,2,3,4...</description>
    <label>Upper Tier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>